<resources>
    <string name="app_name">Proto1</string>
    <string name="title_activity_sliding_bar">SlidingBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_screen">MainScreen</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_wish_list">WishList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="desc">null</string>

    <string name="not_given">Not Given</string>
    <string name="Any">Any</string>
    <string name="Info">Click for more Info</string>

    //Login Screen
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save_data">Save Login Data</string>
    <string name="login">Login</string>

    //First Screen
    <string name="month">Month</string>
    <string name="city_first">City</string>

    //Menu
    <string name="info">Click for more Info</string>
    <string name="wishlist">Wishlist</string>
    <string name="logout">Logout</string>
    <string name="filter">Filter</string>
    <string name="contacts">Contacts</string>
    <string name="properties">Properties</string>
    <string name="language">Language: English</string>
    <string name="profile">Profile</string>

    //Search Bar
    <string name="city">    City"                    ":" "</string>

    //House View
    <string name="address"> Address"            ":" "</string>
    <string name="date">    Available Date" ":" "</string>
    <string name="size">    Size"                    ":" "</string>
    <string name="price">   Price"                  ":" "</string>
    <string name="duration">    Rent Duration"   ":" "</string>
    <string name="total_rent">  Utilities"              ":" "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="furnished">   Furnished"          ":" "</string>
    <string name="description">Description" ":" "</string>

    //Chat Screen
    <string name="send_text">Send</string>
    <string name="your_message">Your Message</string>

    //Filter
    <string name="min_size">Minimum Size</string>
    <string name="sort">Sort By</string>
    <string name="asc">Ascending</string>
    <string name="descend">Descending</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="price_filter">Price</string>
    <string name="duration_filter">Duration</string>

    //Personal Screen
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="telp">Telephone Number</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    //Contact Adapter
    <string name="empty">Empty</string>

    //First Screen
    <string name="filter_success">Filter Success With" "</string>
    <string name="result">" "Result</string>
    <string name="filter_failed">Filter Failed!</string>

    //Wishlist
    <string name="added_wishlist">Added To Wishlist</string>
    <string name="remove_wishlist">Removed From Wishlist</string>

    //Login
    <string name="limit_reaced">Limit Reached!</string>
    <string name="success">Success!</string>
    <string name="conn_failed">Connection Failed!</string>
    <string name="username_false">Username Not Found!</string>
    <string name="pass_false">Wrong Password!</string>
    
    //Personal
    <string name="pass_lt8">New Password Must Contain 8 Character</string>
    <string name="pass_like_old">New Password Must Not Be The Same As Old One</string>
    <string name="pass_not_like_confirm">New Password Is Different With Confirmation</string>
    <string name="no_letter">Please Dont Put Letters!</string>


</resources>