<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_wishlist"
        android:title="@string/wishlist"
        android:icon="@drawable/user"/>
    <item android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/exit"
        />
    <item android:id="@+id/nav_filter"
        android:title="@string/filter"
        android:icon="@drawable/filter_icon"
        />
    <item android:id="@+id/nav_contacts"
        android:title="@string/contacts"
        android:icon="@drawable/contact_icon"
        />
    <item android:id="@+id/nav_owner_houses"
        android:title="@string/properties"
        android:icon="@drawable/home"
        />
    <item android:id="@+id/nav_language"
        android:title="@string/language"
        android:icon="@drawable/ic_baseline_language_24"
        />
</menu>