<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#603A5D"
    tools:context=".FilterScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_container_chat"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@+id/available_date_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#351233"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:titleMargin="@dimen/activity_horizontal_margin">

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:contentDescription="@string/desc"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrowback_white_24dp" />

        <TextView
            android:id="@+id/toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_chat"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.478" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/max_min_holder"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/available_date_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container_chat"
        app:layout_constraintVertical_bias="0.421">

        <TextView
            android:id="@+id/preis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_bold"
            android:textSize="20sp"
            android:translationX="10dp" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/preis_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationX="2dp"
            android:translationY="5dp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dauer_holder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="380dp"

        android:layout_height="wrap_content"
        android:hint="@string/duration_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_holder"
        app:layout_constraintVertical_bias="0.079"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        tools:layout_conversion_absoluteHeight="62dp"
        tools:layout_conversion_absoluteWidth="358dp">


        <AutoCompleteTextView
            android:id="@+id/drop_down_zeit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/available_date_container"
        android:layout_width="380dp"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241">

        <TextView
            android:id="@+id/available_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/date"
            android:textSize="20sp"
            android:translationX="5dp"
            android:translationY="-10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.296" />

        <ImageView
            android:id="@+id/available_date_icon"
            android:layout_width="81dp"
            android:layout_height="44dp"
            android:layout_marginStart="44dp"
            android:src="@drawable/calender_purple_24dp"
            android:translationX="-40dp"
            android:translationY="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.909" />

        <TextView
            android:id="@+id/available_date"
            android:layout_width="270dp"
            android:layout_height="41dp"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/oswald_bold"
            android:textSize="20sp"
            android:translationX="-50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/available_date_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/size_holder"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/available_date_container"
        app:layout_constraintVertical_bias="0.019">

        <TextView
            android:id="@+id/size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_bold"
            android:text="Size: "
            android:textSize="20sp"
            android:translationX="10dp" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/size_range_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationX="2dp"
            android:translationY="5dp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sort_holder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="380dp"

        android:layout_height="wrap_content"
        android:hint="@string/sort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dauer_holder"
        app:layout_constraintVertical_bias="0.082"
        app:startIconDrawable="@drawable/ic_baseline_sort_24"
        tools:layout_conversion_absoluteHeight="62dp"
        tools:layout_conversion_absoluteWidth="358dp">


        <AutoCompleteTextView
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/exit_filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_holder"
        app:layout_constraintVertical_bias="0.328">

        <CheckBox
            android:id="@+id/checkbox_aufsteigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/asc"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/checkbox_absteigen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/checkbox_absteigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/descend"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/exit_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/clear_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

</androidx.constraintlayout.widget.ConstraintLayout>