<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_change_pass_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#603A5D">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_change_pass_popup"
        android:layout_width="413dp"
        android:layout_height="469dp"
        android:background="#351233"
        android:backgroundTint="#351233"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_attributes_container_change_pass_popup"
            android:layout_width="414dp"
            android:layout_height="333dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/old_pass_change_pass_layout_popup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:hint="@string/old_pass"
                android:translationX="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.096"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                tools:layout_conversion_absoluteHeight="93dp"
                tools:layout_conversion_absoluteWidth="358dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/old_pass_change_pass_popup"
                    android:layout_width="403dp"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="67dp"
                    tools:layout_conversion_absoluteWidth="358dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="41dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_pass_change_pass_layout_popup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:hint="@string/new_pass"
                android:translationX="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                tools:layout_conversion_absoluteHeight="93dp"
                tools:layout_conversion_absoluteWidth="358dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pass_change_pass_popup"
                    android:layout_width="402dp"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="67dp"
                    tools:layout_conversion_absoluteWidth="358dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="170dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_pass_change_pass_layout_popup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:hint="@string/confirm_pass"
                android:translationX="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.938"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                tools:layout_conversion_absoluteHeight="93dp"
                tools:layout_conversion_absoluteWidth="358dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pass_change_pass_popup"
                    android:layout_width="402dp"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="67dp"
                    tools:layout_conversion_absoluteWidth="358dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="170dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_cancel_change_pass_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:text="X"
            android:textColor="#BD1010"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_attributes_container_change_pass_popup"
            app:layout_constraintVertical_bias="0.659" />

        <Button
            android:id="@+id/button_accept_change_pass_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="✓"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.385"
            app:layout_constraintStart_toEndOf="@+id/button_cancel_change_pass_popup"
            app:layout_constraintTop_toBottomOf="@+id/password_attributes_container_change_pass_popup"
            app:layout_constraintVertical_bias="0.659" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>